# yapb

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml  python_test.yaml  release.yml  rust_tests.yml
python/yapb/: __init__.py  yapb.pyi
python_tests/: test_progressbar.py
src/: lib.rs  main.rs  progress.rs
tests/: test_yapb.rs
