[package]
name = "yapb"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yapb"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module"] }

[package.metadata.maturin]
python-source = "python"
