[project]
name = "yapb"
version = "0.0.7"
description = "A Minimalist Progress Bar for Python"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["progress", "bar", "progressbar", "progress-bar"]
authors = [
  {email = "wilhelm.wermelin@icloud.com"},
  {name = "Wilhelm Söderkvist Vermelin"}
]
maintainers = [
  {name = "Wilhelm Söderkvist Vermelin", email = "wilhelm.wermelin@icloud.com"}
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "mypy", "flake8"]

[project.urls]
repository = "https://github.com/wilswer/yapb"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.bumpver]
current_version = "0.0.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]