[project]
name = "yapb"
version = "0.0.13"
description = "A Minimalist Progress Bar for Python"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["progress", "bar", "progressbar", "progress-bar"]
authors = [
  {email = "wilhelm.wermelin@icloud.com"},
  {name = "Wilhelm Söderkvist Vermelin"}
]
maintainers = [
  {name = "Wilhelm Söderkvist Vermelin", email = "wilhelm.wermelin@icloud.com"}
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "mypy", "ruff", "pytest", "pre-commit"]

[project.urls]
repository = "https://github.com/wilswer/yapb"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.bumpver]
current_version = "0.0.13"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
ignore = ["N806", "ANN101", "D203", "D107", "D105", "D100", "D213", "D104", "D417", "PD901"]
select = ["E", "W", "F", "I", "UP", "B", "ANN", "S", "N", "SIM", "A", "ERA", "D"]

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "tests",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
